<resources>
    <string name="app_name">PasbaraDashboard</string>
    <string name="record">Record</string>
    <string name="shot_views">Shot Views</string>
    <string name="manage_promotions_discounts_and_coupon_codes">Manage promotions, discounts, and coupon codes.</string>
    <string name="manage_movie_listings_showtimes_and_seating_arrangement">Manage movie listings, showtimes, and seating arrangement.</string>
    <string name="monitor_and_analyze_app_performance_and_user_activity">Monitor and analyze app performance and user activity.</string>
    <string name="manage_user_roles_and_permissions">Manage User roles and permissions.</string>
    <string name="access_booking_records_and_customer_information">Access booking records and customer information.</string>
    <string name="manage_movie_details">Manage movie details</string>
    <string name="update_and_maintain_the_content_and_information_on_the_app">Update and maintain the content and information on the app.</string>
    <string name="manage">Manage</string>
    <string name="pasbara_admin_dashboard">Pasbara Admin Dashboard</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_into_continue">Sign In into Continue</string>
    <string name="your_email_com">your@email.com</string>
    <string name="email">Email</string>
    <string name="password_hint">*****************</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="pasbara_theater">Pasbara Theater</string>
    <string name="create_account">Create Account</string>
    <string name="martin_luther">Martin Luther</string>
    <string name="username">Username</string>
    <string name="_94771234567">94771234567</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="menu">menu</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="verified">Verified</string>
    <string name="phone">Phone</string>
    <string name="schedule_movies">Schedule Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="description">Description</string>
    <string name="pricing_per_seat">Pricing per seat</string>
    <string name="url_of_movie_trailer">URL of Movie Trailer</string>
    <string name="select">Select</string>
    <string name="search">Search...</string>
    <string name="view">view</string>
    <string name="dummy_name">Prince Tachalla</string>
    <string name="dummy_date">2022-12-04 09:44</string>
    <string name="booking_records">Booking Records</string>
    <string name="select_movie">Select movie</string>
    <string name="movie">Movie</string>
    <string name="dummy_booking_detail">4 seats | Total cost : 2800 LKR</string>
    <string name="dummy_title">The Batman</string>
    <string name="dummy_email">tachalla22black3panther@gmail.com</string>
    <string name="promotion_and_discount"><![CDATA[Promotion & Discount]]></string>
    <string name="valid_period">Valid Period</string>
    <string name="add">Add</string>
    <string name="my_profile">My Profile</string>
    <string name="dummy_employee_name">Martin Luther</string>
    <string name="manage_my_profile">Manage my profile</string>
</resources>