<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/layoutBookingRecordItem"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto">

<com.google.android.material.card.MaterialCardView
    android:layout_width="50dp"
    android:layout_height="50dp"
    app:cardBackgroundColor="@color/dark_yellow"
    app:cardCornerRadius="14dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:src="@drawable/booking_records"
        app:tint="@color/white"/>

</com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="14dp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textAccessUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/dark_yellow"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummy_title"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/dummy_date"
            android:textColor="@color/secondary_text"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLocation"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="@id/textTitle"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:tint="@color/secondary_text"/>

        <TextView
            android:id="@+id/textDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_booking_detail"
            android:textColor="@color/secondary_text"
            android:textSize="10sp"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="@id/imageLocation"
            app:layout_constraintStart_toEndOf="@id/imageLocation"
            app:layout_constraintTop_toTopOf="@id/imageLocation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>