<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/dashboard_item_2"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/booking_records"
            app:tint="@color/white"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textManageMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/manage_movie_details"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/textAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLocation"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toStartOf="@id/textTitle"
                app:layout_constraintTop_toBottomOf="@id/textTitle"
                app:tint="@color/secondary_text"/>

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_and_maintain_the_content_and_information_on_the_app"
                android:textColor="@color/secondary_text"
                android:textSize="10sp"
                android:maxLines="2"
                app:layout_constraintBottom_toBottomOf="@id/imageLocation"
                app:layout_constraintStart_toEndOf="@id/imageLocation"
                app:layout_constraintTop_toTopOf="@id/imageLocation"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>