<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:padding="@dimen/_12sdp"
tools:context=".EmployeeProfileEntity">

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageBack"
    android:layout_width="@dimen/_20sdp"
    android:layout_height="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:src="@drawable/ic_back_arrow"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/dark_yellow"/>

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imageSearch"
    android:layout_width="@dimen/_20sdp"
    android:layout_height="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:src="@drawable/ic_search"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/dark_yellow"/>

<TextView
    android:id="@+id/textTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:gravity="center"
    android:text="@string/my_profile"
    android:textColor="@color/dark_yellow"
    android:textSize="@dimen/_14ssp"
    app:layout_constraintBottom_toBottomOf="@id/imageBack"
    app:layout_constraintEnd_toStartOf="@id/imageSearch"
    app:layout_constraintStart_toEndOf="@id/imageBack"
    app:layout_constraintTop_toTopOf="@id/imageBack" />

<com.google.android.material.card.MaterialCardView
    android:id="@+id/selectCarPhoto"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="@dimen/_100sdp"
    android:layout_marginTop="@dimen/_32sdp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textTitle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile3"
            app:riv_oval="true"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

<TextView
    android:id="@+id/textUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_12sdp"
    android:text="@string/dummy_employee_name"
    android:textColor="@color/primary_text"
    android:textSize="@dimen/_18ssp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/selectCarPhoto"/>

<TextView
    android:id="@+id/textSubTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_4sdp"
    android:text="@string/manage_my_profile"
    android:textColor="@color/secondary_text"
    android:textSize="@dimen/_11ssp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textUsername"/>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fabAdd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_4sdp"
    android:contentDescription="@string/app_name"
    android:src="@drawable/ic_add_24"
    android:backgroundTint="@color/primary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:tint="@color/dark_yellow"/>

<androidx.constraintlayout.helper.widget.Flow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_4sdp"
    android:layout_marginEnd="@dimen/_4sdp"
    app:constraint_referenced_ids="cardEUR, cardCollection"
    app:flow_horizontalGap="@dimen/_8sdp"
    app:flow_maxElementsWrap="2"
    app:flow_verticalGap="@dimen/_8sdp"
    app:flow_wrapMode="aligned"
    app:layout_constraintBottom_toTopOf="@id/fabAdd"
    app:layout_constraintTop_toBottomOf="@id/textSubTitle"/>

<androidx.cardview.widget.CardView
    android:id="@+id/cardEUR"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_yellow"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TOT"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="30"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="Total booking"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:id="@+id/cardCollection"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_yellow"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardUseCompatPadding="true"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TAGs"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="My collection"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="action | horror | ..."
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>