<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <View
            android:id="@+id/viewHeaderBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_125sdp"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/record"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/textTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textTitle"
            android:tint="@color/white"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@id/viewHeaderBackground"
            app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shot_views"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/layoutClients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layoutImpacted"
                    app:layout_constraintTop_toBottomOf="@id/textView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/male_user"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Users"
                        android:textColor="@color/secondary_text"
                        android:textSize="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="56"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutImpacted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/layoutClients"
                    app:layout_constraintEnd_toStartOf="@id/layoutFollowings"
                    app:layout_constraintTop_toBottomOf="@id/textView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/booking_records"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Today Bookings"
                        android:textColor="@color/secondary_text"
                        android:textSize="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutFollowings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/layoutImpacted"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/booking_per_month"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Booking Per Month"
                        android:textColor="@color/secondary_text"
                        android:textSize="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="36"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/dashboard_item_1"/>
                <include layout="@layout/dashboard_item_2"/>
                <include layout="@layout/dashboard_item_3"/>
                <include layout="@layout/dashboard_item_4"/>
                <include layout="@layout/dashboard_item_5"/>
                <include layout="@layout/dashboard_item_6"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:backgroundTint="@color/white"
        app:headerLayout="@layout/layout_navigation_header"
        app:theme="@style/NavigationViewTheme"/>

</androidx.drawerlayout.widget.DrawerLayout>